<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/getStartedImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/getStarted"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="62dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/getStartedImage"
        />

    <TextView
        android:id="@+id/getStartedHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getStartedHeading"
        android:textSize="24sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="159dp"
        />

    <TextView
        android:id="@+id/getStartedSubheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getStartedSubheading"
        android:textSize="14sp"

        app:layout_constraintTop_toBottomOf="@+id/getStartedHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/fullNamePlaceholder"

        app:layout_constraintTop_toBottomOf="@id/getStartedSubheading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="36dp"
        android:background="#C4C4C4"
        android:paddingHorizontal="22dp"
        />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/emailPlaceholder1"

        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="19dp"
        android:background="#C4C4C4"
        android:paddingHorizontal="22dp"
        />

    <EditText
        android:id="@+id/numberInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/numberPlaceholder"

        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="19dp"
        android:background="#C4C4C4"
        android:paddingHorizontal="22dp"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/passwordPlaceholder1"

        app:layout_constraintTop_toBottomOf="@id/numberInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="19dp"
        android:background="#C4C4C4"
        android:paddingHorizontal="22dp"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxText"

        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="19dp"
        android:textSize="9sp"
        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="300dp"
        android:layout_height="50dp"

        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="66dp"
        android:text="@string/NextButtonText"
        android:background="#6C63FF"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/bottomText"
        android:textSize="13sp"
        android:layout_marginTop="25dp"

        />

</android.support.constraint.ConstraintLayout>